Agrando información personal en el index

--- a/xml_JP17003/index.html
+++ b/xml_JP17003/index.html
@@ -7,7 +7,8 @@
 <h1>Ejercicios Individual</h1>
 
 <p>Carnet: JP17003
-	Estudiante: Jimenez Palma, Edwin Antonio
+	--Estudiante: Jimenez Palma, Edwin Antonio
+	--Grupo de trabajo 02
 </p>
 
 <p>Documentos XML Bien Formados o Bien Construidos</p>
